<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wordman</string>
    <string name="title_section1">Study Record</string>
    <string name="title_section2">Lessons</string>
    <string name="title_section3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="cate_plain">Study Plain</string>
    <string name="word_day">Word / daily</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cate_general">General</string>
    <string name="pref_auto_speech">Automatic Speech</string>
    <string name="words">{%d} Words</string>
    <string name="goon">Go on</string>
    <string name="rest">Rest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
